syntax = "proto3";

message State {
  optional TileOffers previous_offers = 2;
  optional TileOffers next_offers = 3;
  // Tiles are in random order
  repeated int32 remaining_tiles = 4;
  // Ordered by turn order in the first round
  repeated PlayerState player_state = 5;
}

message TileOffer {
  optional int32 tile_number = 1;
  optional TileClaim claim = 2;
}

message TileClaim { optional int32 player_number = 1; }

message TileOffers { repeated TileOffer offer = 1; }

message PlayerState {
  optional string name = 1;
  // Contains a LocationState (often the default instance) for every location
  // that can possibly be occupied during a game. The region is a square whose
  // sides have length 1 + 2 * (max kingdom size - 1) since the player could
  // build out to (max kingdom size - 1) from the center in any direction.
  repeated LocationState location_state = 2;
}

enum Terrain {
  TERRAIN_UNKNOWN = 0;
  TERRAIN_EMPTY = 1;
  TERRAIN_FOREST = 2;
  TERRAIN_WATER = 3;
}

message LocationState {
  optional Terrain terrain = 2;
  optional int32 crowns = 3;
}

// The direction of a tile with respect to its zeroth square
enum TileOrientation {
  UNKNOWN = 0;
  RIGHT = 1;
  DOWN = 2;
  LEFT = 3;
  UP = 4;
}

message Action {
  message ClaimTile { optional int32 offer_number = 1; }

  message PlaceTile {
    optional int32 tile_number = 1;
    optional int32 x = 2;
    optional int32 y = 3;
    optional TileOrientation orientation = 4;
  }

  // Either one or both of the following properties may be present. The first
  // turn of the game is only a claim; the last turn of the game is only a
  // place.
  ClaimTile claim_tile = 1;
  PlaceTile place_tile = 2;
}